# BrainGames_byHexlet

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  logic.py
brain_games/games/: play_calc.py  play_even.py  play_prime.py  play_progression.py
brain_games/scripts/: brain_calc.py  brain_divisor.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
