[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Maksim Vikhrov <maxvihr@yandex.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-divisor = "brain_games.scripts.brain_divisor:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
